update pom.xml and delete unnecessary folder